--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <hr>
     <div>
     <h1> Hi There </h1>
+    <h2>GUYS</h2>
     <h2 class="greetings"> Good Morning!!!</h2>
     </div>
     <div class="container-1">
